--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
  <head>
-  <meta http-equiv="refresh" content="3; url=http://www.tigir.com">
+  <meta http-equiv="refresh" content="3; url=tel:+79255354407">
   <title>Тег IMG</title>
  </head>
  <body> 
